Fixed font-size plugins in thorkey.jsx on mobile

--- a/src/styles/component/_thorkey.scss
+++ b/src/styles/component/_thorkey.scss
@@ -68,7 +68,7 @@
       }
       .p-thorkey{
         color:rgb(70, 70, 70);
-        font-size: 16px;
+        font-size: 14px;
         font-weight: 600;
       }
      
@@ -104,7 +104,7 @@
     }
     .p-thorkey{
       color:rgb(70, 70, 70);
-      font-size: 14px;
+      font-size: 12px;
       font-weight: 600;
     }  
     .thorkey-li {
